Updating last projects

--- a/index.html
+++ b/index.html
@@ -1,148 +1,358 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html>
-	<head>
-		<title>DJ Evan Portfolio</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-	</head>
-	<body class="landing is-preload">
+  <head>
+    <title>DJ Evan Portfolio</title>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, user-scalable=no"
+    />
+    <link
+      rel="stylesheet"
+      href="assets/css/main.css"
+    />
+    <noscript
+      ><link
+        rel="stylesheet"
+        href="assets/css/noscript.css"
+    /></noscript>
+  </head>
+  <body class="landing is-preload">
+    <!-- Page Wrapper -->
+    <div id="page-wrapper">
+      <!-- Header -->
+      <header id="header" class="alt">
+        <h1><a href="index.html">DJ Evan</a></h1>
+        <nav id="nav">
+          <ul>
+            <li class="special">
+              <a href="#menu" class="menuToggle"
+                ><span>Menu</span></a
+              >
+              <div id="menu">
+                <ul>
+                  <li>
+                    <a href="index.html">Home</a>
+                  </li>
+                  <li>
+                    <a href="#one" class="scrolly">
+                      About
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#two" class="scrolly">
+                      Work
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#cta" class="scrolly">
+                      Contact
+                    </a>
+                  </li>
+                </ul>
+              </div>
+            </li>
+          </ul>
+        </nav>
+      </header>
 
-		<!-- Page Wrapper -->
-			<div id="page-wrapper">
+      <!-- Banner -->
+      <section id="banner">
+        <div class="inner">
+          <h2>Hi! It's Evan!</h2>
+          <p>
+            lets craft something<br />
+            amazing together<br />
+          </p>
+        </div>
+        <a href="#one" class="more scrolly"
+          >Learn More</a
+        >
+      </section>
 
-				<!-- Header -->
-        <header id="header" class="alt">
-          <h1><a href="index.html">DJ Evan</a></h1>
-          <nav id="nav">
-            <ul>
-              <li class="special">
-                <a href="#menu" class="menuToggle"><span>Menu</span></a>
-                <div id="menu">
-                  <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="#one" class="scrolly">About</a></li>
-                    <li><a href="#two" class="scrolly">Work</a></li>
-                    <li><a href="#cta" class="scrolly">Contact</a></li>
-                  </ul>
-                </div>
-              </li>
-            </ul>
-          </nav>
-        </header>
+      <!-- One -->
+      <section id="one" class="wrapper style1 special">
+        <div class="inner">
+          <header class="major">
+            <h2>About Me</h2>
+            <p>
+              My name is David Jonathan Evan. Currently
+              <br />I'm studying at Satya Wacana
+              Christian University <br />
+              to pursue Informatics Engineering
+              degree.<br />
+              I'd like to help people and companies
+              around the world <br />
+              craft amazing websites and mobile apps
+              <br />
+              that are simple, elegant, and meaningful.
+            </p>
+            <p>
+              Below here are some of my projects. Feel
+              free to check them out!
+            </p>
+          </header>
+          <ul class="icons major">
+            <li>
+              <span
+                class="icon solid fa-mobile-alt major style1"
+                ><span class="label"
+                  >Mobile</span
+                ></span
+              >
+            </li>
+            <li>
+              <span
+                class="icon solid fa-database major style2"
+                ><span class="label"
+                  >Database</span
+                ></span
+              >
+            </li>
+            <li>
+              <span
+                class="icon solid fa-code major style3"
+              >
+                <span class="label">Code</span>
+              </span>
+            </li>
+          </ul>
+        </div>
+      </section>
 
-				<!-- Banner -->
-					<section id="banner">
-						<div class="inner">
-							<h2>Hi! It's Evan!</h2>
-							<p>lets craft something<br />
-							amazing together<br /></p>
-						</div>
-						<a href="#one" class="more scrolly">Learn More</a>
-					</section>
+      <!-- Two -->
+      <section id="two" class="wrapper alt style2">
+        <section class="spotlight">
+          <div class="image">
+            <img src="images/McBurger.jpg" alt="" />
+          </div>
+          <div class="content">
+            <h2>Project : McBurger</h2>
+            <p>
+              HTML & CSS - Javascript - React - Redux -
+              Firebase
+            </p>
+            <p>
+              Built a burger builder app so customer
+              can order their own custom ingredient
+              burger. There are also built-in menu
+              option in the bottom of the main page The
+              app implemented slider, user
+              authentication, state management, modals,
+              side drawer, which all of that built on
+              top of React js library and firebase for
+              the backend
+            </p>
+            <a
+              href="https://mcburger-react.web.app/"
+              target="_blank"
+              class="button small primary"
+            >
+              Website
+            </a>
+            <a
+              href="https://github.com/vans-id/McBurger"
+              target="_blank"
+              class="button small"
+            >
+              Github
+            </a>
+          </div>
+        </section>
+        <section class="spotlight">
+          <div class="image">
+            <img src="images/Nomads.jpg" alt="" />
+          </div>
+          <div class="content">
+            <h2>Project : Nomads</h2>
+            <p>
+              HTML & CSS - Bootstrap - Javascript -
+              jQuery <br />PHP - Laravel - MySQL
+            </p>
+            <p>
+              Built a Travel Website for customers. The
+              biggest diffrent between the other travel
+              provider is the app includes passport and
+              VISA handling for needed users. This app
+              is made of Laravel and PHP for the
+              backend while on the frontend uses
+              Bootstrap 4 and SCSS.
+            </p>
+            <a
+              href="https://nomads-travel.herokuapp.com/"
+              class="button small primary"
+              target="_blank"
+            >
+              Website
+            </a>
+            <a
+              href="https://github.com/vans-id/nomads-app"
+              class="button small"
+              target="_blank"
+            >
+              Github
+            </a>
+          </div>
+        </section>
 
-				<!-- One -->
-					<section id="one" class="wrapper style1 special">
-						<div class="inner">
-							<header class="major">
-								<h2>About Me</h2>
-								<p>My name is David Jonathan Evan. Currently <br />I'm an Informatics Engineering student <br /> of Satya Wacana Christian University.<br />
-								I'd like to help people and companies around the world <br> craft amazing websites and mobile apps <br> that are simple, elegant, and meaningful.</p>
-								<p>Below here are some of my projects. Feel free to check them out!</p>
-							</header>
-							<ul class="icons major">
-								<li><span class="icon solid fa-mobile-alt major style1"><span class="label">Mobile</span></span></li>
-								<li><span class="icon solid fa-database major style2"><span class="label">Database</span></span></li>
-								<li><span class="icon solid fa-code major style3"><span class="label">Code</span></span></li>
-							</ul>
-						</div>
-					</section>
+        <section class="spotlight">
+          <div class="image">
+            <img
+              src="images/ShoppingList.jpg"
+              alt=""
+            />
+          </div>
+          <div class="content">
+            <h2>Project : ShoppingList</h2>
+            <p>
+              HTML & CSS - Javascript - React - Redux -
+              Node - Express <br />
+              - Mongodb - Bootstrap - Mongoose
+            </p>
+            <p>
+              A simple CRUD shopping list app which we
+              list our shopping items. It also
+              implemented User Authentication. This app
+              is made of Mongo DB Atlas for NoSQL
+              database, Node and express for the
+              backend, and React JS with Redux for the
+              frontend. For Styling, this app uses
+              Bootstrap and some CSS.
+            </p>
+            <a
+              href="https://protected-dawn-30955.herokuapp.com/"
+              class="button small primary"
+              target="_blank"
+            >
+              Website
+            </a>
+            <a
+              href="https://github.com/vans-id/mernshopinglist"
+              class="button small"
+              target="_blank"
+            >
+              Github
+            </a>
+          </div>
+        </section>
+      </section>
 
-				<!-- Two -->
-					<section id="two" class="wrapper alt style2">
-						<section class="spotlight">
-							<div class="image"><img src="images/avangegram.jpg" alt="" /></div><div class="content">
-								<h2>Project : AvangeGram</h2>
-								<p>
-									HTML & CSS - Javascript - PHP - MySQL - Laravel <br> - VueJs - Bootstrap
-								</p>
-								<p>Made by Laravel for the backend and some of Vue js and Bootstrap on the front end. This app is a clone of the real instagram, which includes : Login and logout, Signup as a new user, Add a new post, Edit our Bio, See detail of a post, Search another user, then follow them, Protected Routes, Feed page, which includes posts from other people we follow</p>
-							</div>
-						</section>
-						<section class="spotlight">
-							<div class="image"><img src="images/vanz_movie.jpg" alt="" /></div><div class="content">
-								<h2>Project : Vanz Movie</h2>
-								<p>HTML & CSS - Bootstrap - Javascript - jQuery - ajax - public API</p>
-								<p>Using oMDB public API, this app serve movies which we search the title for. The app is made of from a lot Javascript and jQuery to make ajax request works. By clicking details link, it will show up a modal box which shows the detail of each movie.</p>
-							</div>
-						</section>
-					</section>
+      <!-- Three -->
+      <section
+        id="three"
+        class="wrapper style3 special"
+      >
+        <div class="inner">
+          <header class="major">
+            <h2>What I Can Do</h2>
+            <p>
+              Here are some description of my skills
+              and<br />
+              things I've learned.
+            </p>
+          </header>
+          <ul class="features">
+            <li class="icon solid fa-laptop-code">
+              <h3>Frontend Development</h3>
+              <p>
+                Frontend is all your user see when they
+                visit your app. Amazing user
+                experience, clean design and perfect
+                color is something you must want to!.
+              </p>
+            </li>
+            <li class="icon solid fa-database">
+              <h3>Backend Development</h3>
+              <p>
+                Sometimes you don't want just nice
+                looking apps, but with powerful
+                features like Dynamic Content, Login
+                system, Admin privilege, and much much
+                more with databases
+              </p>
+            </li>
+            <li class="icon solid fa-mobile-alt">
+              <h3>Mobile Development</h3>
+              <p>
+                There's no getting away from it, soon
+                everyone will be viewing the world on
+                their mobile phones. Make sure your app
+                looks great in all devices.
+              </p>
+            </li>
+            <li class="icon solid fa-gem">
+              <h3>Other Skills</h3>
+              <p>
+                Some technology that I'm familiar to
+                are the following : C++, Java, Python,
+                Git, Github, Firebase, and Heroku
+              </p>
+            </li>
+          </ul>
+        </div>
+      </section>
 
-				<!-- Three -->
-					<section id="three" class="wrapper style3 special">
-						<div class="inner">
-							<header class="major">
-								<h2>What I Can Do</h2>
-								<p>Here are some description of my skills and<br />
-								things I've learned.</p>
-							</header>
-							<ul class="features">
-								<li class="icon solid fa-laptop-code">
-									<h3>Frontend Development</h3>
-									<p>Frontend frameworks offers amazing user experience. Such as Single Page Application, and responsive-looking websites.</p>
-								</li>
-								<li class="icon solid fa-database">
-									<h3>Backend Development</h3>
-									<p>Nice looking websites will be useless if it hasn't had proper functionality. Dynamic Content Web Pages  with databases is what we want to.</p>
-								</li>
-								<li class="icon solid fa-mobile-alt">
-									<h3>Mobile Development</h3>
-									<p>There's no getting away from it, soon everyone will be viewing the world on their mobile phones. Get your mobile apps now!</p>
-								</li>
-								<li class="icon solid fa-gem">
-									<h3>Other SKills</h3>
-									<p>Some technology that I'm familiar to is the following : C++, Python, Django, Git, Github, Firebase, Node, and Express</p>
-								</li>
-							</ul>
-						</div>
-					</section>
+      <!-- CTA -->
+      <section id="cta" class="wrapper style4">
+        <div class="inner">
+          <header>
+            <h2>Get in touch</h2>
+            <p>
+              I'm here to create meaningful and lasting
+              relationships with my clients. Feel free
+              to check these links down below!
+            </p>
+          </header>
+          <ul class="actions stacked">
+            <li>
+              <a
+                href="https://www.gmail.com"
+                class="button fit primary"
+                >Send Email</a
+              >
+            </li>
+          </ul>
+        </div>
+      </section>
 
-				<!-- CTA -->
-					<section id="cta" class="wrapper style4">
-						<div class="inner">
-							<header>
-								<h2>Get in touch</h2>
-								<p>I'm here to create meaningful and lasting relationships with my clients. Feel free to check these links down below!</p>
-							</header>
-							<ul class="actions stacked">
-								<li><a href="https://www.gmail.com" class="button fit primary">Send Email</a></li>
-							</ul>
-						</div>
-					</section>
+      <!-- Footer -->
+      <footer id="footer">
+        <ul class="icons">
+          <li>
+            <a
+              href="https://www.instagram.com/dj.evann/"
+              class="icon brands fa-instagram"
+              ><span class="label">Instagram</span></a
+            >
+          </li>
+          <li>
+            <a
+              href="https://github.com/vans-id"
+              class="icon brands fa-github"
+              ><span class="label">Github</span></a
+            >
+          </li>
+          <li>
+            <a
+              href="https://www.gmail.com"
+              class="icon solid fa-envelope"
+              ><span class="label">Email</span></a
+            >
+          </li>
+        </ul>
+        <ul class="copyright">
+          <li>&copy; 2020 David Jonathan Evan</li>
+        </ul>
+      </footer>
+    </div>
 
-				<!-- Footer -->
-					<footer id="footer">
-						<ul class="icons">
-							<li><a href="https://www.instagram.com/dj.evann/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="https://github.com/vans-id" class="icon brands fa-github"><span class="label">Github</span></a></li>
-							<li><a href="https://www.gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
-						</ul>
-						<ul class="copyright">
-							<li>&copy; 2019 David Jonathan Evan</li>
-						</ul>
-					</footer>
-
-			</div>
-
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
-
-	</body>
+    <!-- Scripts -->
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/jquery.scrollex.min.js"></script>
+    <script src="assets/js/jquery.scrolly.min.js"></script>
+    <script src="assets/js/browser.min.js"></script>
+    <script src="assets/js/breakpoints.min.js"></script>
+    <script src="assets/js/util.js"></script>
+    <script src="assets/js/main.js"></script>
+  </body>
 </html>
