Adding spinner on load

--- a/index.html
+++ b/index.html
@@ -346,6 +346,12 @@
       </footer>
     </div>
 
+    <div class="loader-wrapper">
+      <span class="loader">
+        <span class="loader-inner"></span>
+      </span>
+    </div>
+
     <!-- Scripts -->
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/js/jquery.scrollex.min.js"></script>
