Fixing some css

--- a/index.html
+++ b/index.html
@@ -143,20 +143,22 @@
               top of React js library and firebase for
               the backend
             </p>
-            <a
-              href="https://mcburger-react.web.app/"
-              target="_blank"
-              class="button small primary"
-            >
-              Website
-            </a>
-            <a
-              href="https://github.com/vans-id/McBurger"
-              target="_blank"
-              class="button small"
-            >
-              Github
-            </a>
+            <div>
+              <a
+                href="https://mcburger-react.web.app/"
+                target="_blank"
+                class="button small primary"
+              >
+                Website
+              </a>
+              <a
+                href="https://github.com/vans-id/McBurger"
+                target="_blank"
+                class="button small"
+              >
+                Github
+              </a>
+            </div>
           </div>
         </section>
         <section class="spotlight">
@@ -178,20 +180,22 @@
               backend while on the frontend uses
               Bootstrap 4 and SCSS.
             </p>
-            <a
-              href="https://nomads-travel.herokuapp.com/"
-              class="button small primary"
-              target="_blank"
-            >
-              Website
-            </a>
-            <a
-              href="https://github.com/vans-id/nomads-app"
-              class="button small"
-              target="_blank"
-            >
-              Github
-            </a>
+            <div>
+              <a
+                href="https://nomads-travel.herokuapp.com/"
+                class="button small primary"
+                target="_blank"
+              >
+                Website
+              </a>
+              <a
+                href="https://github.com/vans-id/nomads-app"
+                class="button small"
+                target="_blank"
+              >
+                Github
+              </a>
+            </div>
           </div>
         </section>
 
@@ -219,20 +223,22 @@
               frontend. For Styling, this app uses
               Bootstrap and some CSS.
             </p>
-            <a
-              href="https://protected-dawn-30955.herokuapp.com/"
-              class="button small primary"
-              target="_blank"
-            >
-              Website
-            </a>
-            <a
-              href="https://github.com/vans-id/mernshopinglist"
-              class="button small"
-              target="_blank"
-            >
-              Github
-            </a>
+            <div>
+              <a
+                href="https://protected-dawn-30955.herokuapp.com/"
+                class="button small primary"
+                target="_blank"
+              >
+                Website
+              </a>
+              <a
+                href="https://github.com/vans-id/mernshopinglist"
+                class="button small"
+                target="_blank"
+              >
+                Github
+              </a>
+            </div>
           </div>
         </section>
       </section>
@@ -283,7 +289,7 @@
             <li class="icon solid fa-gem">
               <h3>Other Skills</h3>
               <p>
-                Some technology that I'm familiar to
+                Some technologies that I'm familiar to
                 are the following : C++, Java, Python,
                 Git, Github, Firebase, and Heroku
               </p>
