minimizing img size

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         href="assets/css/noscript.css"
     /></noscript>
   </head>
-  <body class="landing is-preload">
+  <body class="landing">
     <!-- Page Wrapper -->
     <div id="page-wrapper">
       <!-- Header -->
